--- a/.config/gtk-3.0/settings.ini
+++ b/.config/gtk-3.0/settings.ini
@@ -9,6 +9,7 @@ gtk-decoration-layout=icon:minimize,maximize,close
 gtk-enable-animations=true
 gtk-font-name=Roboto Medium, Medium 10
 gtk-icon-theme-name=Papirus-Dark
+gtk-im-module=fcitx
 gtk-menu-images=true
 gtk-modules=colorreload-gtk-module:window-decorations-gtk-module
 gtk-primary-button-warps-slider=true
