--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,4 +1,7 @@
 shell /usr/bin/zsh
+#MISC
+shell_integration no-cursor
+notify_on_cmd_finish invisible 10 notify
 #FONT
 font_size 16
 # font_family JetBrainsMono Nerd Font
@@ -8,6 +11,7 @@ font_size 16
 
 #BACKGROUND#############################################################################
 background_opacity 0.8
+dynamic_background_opacity yes
 enable_background_blur yes
 background_blur 0
 background_tint 0.0
@@ -30,18 +34,19 @@ tab_bar_style powerline
 tab_switch_strategy previous
 tab_separator "┇"
 #CURSOR##################################################################################
-shell_intergration no-cursor
 # cursor #00ff00
 cursor_text_color background
 cursor_shape block
 cursor_shape_unfocused hollow
 cursor_blink_interval 0.5 ease-in-out
+cursur_stop_blinking_after 0
 cursor_trail 1
 cursor_trail_decay 0.1 0.5
 cursor_trail_start_threshold 5
 curcor_trail_color none
 #SCROLLBACK##################################################################################
 scrollback_lines 2000
+#scrollback_pager nvim --cmd 'set eventignore=FileType' +'nnoremap q ZQ' +'call nvim_open_term(0, {})' +'set nomodified nolist' +'$' -
 scrollbar hovered
 scrollbar_interactive yes
 scrollbar_jump_on_click yes
@@ -87,24 +92,35 @@ hide_window_decorations yes
 ###################################################
 #KEYMAP
 ###################################################
+clear_all_shortcuts yes
+kitty_mod ctrl+shift
+
+# Font
+map ctrl+flus change_font_size all +2.0
+map ctrl+shift+minus change_font_size all -2.0
+map kitty_mod+f6 change_font_size all 12.0
 # Clipboard
 map ctrl+shift+v paste_from_clipboard
 map ctrl+shift+c copy_to_clipboard
+map ctrl+alt+v paste_from_selection
+
 # Scrolling
 map ctrl+shift+up        scroll_line_up
-map ctrl+shift+down      scroll_line_down
+map ctrl+shift+down      scroll_likne_down
 map ctrl+shift+k         scroll_line_up
 map ctrl+shift+j         scroll_line_down
-map ctrl+shift+page_up   scroll_page_up
-map ctrl+shift+page_down scroll_page_down
+map ctrl+fage_up   scroll_page_up
+map ctrl+fage_down scroll_page_down
+map ctrl+shift+z scroll_to_prompt -1
+map ctrl+shift+x scroll_to_prompt 1
 map ctrl+shift+home      scroll_home
 map ctrl+shift+end       scroll_end
-map ctrl+shift+h         show_scrollback
+map ctrl+shift+h         show_scrollback 
+map ctrl+shift+g show_last_command_output
 
 # Window management
-map ctrl+shift+n             new_os_window
-map ctrl+w             close_window
-map ctrl+t    new_window
+map ctrl+shift+enter    new_window
+map ctrl+shift+w        close_window
 map ctrl+shift+]        next_window
 map ctrl+shift+[        previous_window
 map ctrl+shift+f        move_window_forward
@@ -120,6 +136,7 @@ map ctrl+shift+7        seventh_window
 map ctrl+shift+8        eighth_window
 map ctrl+shift+9        ninth_window
 map ctrl+shift+0        tenth_window
+map ctrl+shift+f7       focus_visible_window
 
 # Tab management
 map alt+.    next_tab
@@ -129,9 +146,18 @@ map ctrl+w        close_tab
 map ctrl+shift+l        next_layout
 map alt+shift+.        move_tab_forward
 map alt+shift+,        move_tab_backward
-# Misc
-map ctrl+shift+f10 kitten themes
-map ctrl+shift+f9 kitten choose-fonts
+# Select and act on visible text
+map ctrl+shift+e open_url_with_hints
+map ctrl+f>f kitten hints --type path --program -
+map ctrl+f>p kitten hints --type path
+map ctrl+f>l kitten hints --type line --program -
+map ctrl+f>w kitten hints --type word --program -
+map ctrl+f>y kitten hints --type hyperlink
+# Miscellaneous
+map ctrl+shift+f9 edit_config_file
+map ctrl+shift+escape kitty_shell window
+map ctrl+shift+a>m set_background_opacity +0.1
+map ctrl+shift+a>l set_background_opacity -0.1
 # BEGIN_KITTY_THEME
 # Catppuccin-Macchiato
 include current-theme.conf
