--- a/.config/yazi/keymap.toml
+++ b/.config/yazi/keymap.toml
@@ -4,7 +4,7 @@
 
 [mgr]
 prepend_keymap = [
-	{on   = "l", run  = "plugin smart-enter", desc = "Enter the child directory, or open the file"},
+  #	{on   = "l", run  = "plugin smart-enter", desc = "Enter the child directory, or open the file"},
 	{on  = "y", run = [ 'shell -- for path in %s; do echo "file://$path"; done | wl-copy -t text/uri-list', "yank"]},
 
 	{on = "q", run = "plugin confirm-quit", desc = "Confirm before quitting if multiple tabs are open"},
