add zsh prompt, yazi reveal keymap and more

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -2,8 +2,11 @@ shell /usr/bin/zsh
 #MISC
 shell_integration no-cursor
 notify_on_cmd_finish invisible 10 notify
+allow_remote_control yes
+listen_on unix:/tmp/kitty
+action_alias kitty_scrollback_nvim kitten /home/aechewhy/.local/share/nvim/lazy/kitty-scrollback.nvim/python/kitty_scrollback_nvim.py 
 #FONT
-font_size 16
+font_size 13
 # font_family JetBrainsMono Nerd Font
 # bold_font JetBrainsMono Nerd Font Bold
 # italic_font JetBrainsMono Nerd Font Italic
@@ -45,8 +48,8 @@ cursor_trail_decay 0.1 0.5
 cursor_trail_start_threshold 5
 curcor_trail_color none
 #SCROLLBACK##################################################################################
+scrollback_pager nvim
 scrollback_lines 2000
-#scrollback_pager nvim --cmd 'set eventignore=FileType' +'nnoremap q ZQ' +'call nvim_open_term(0, {})' +'set nomodified nolist' +'$' -
 scrollbar hovered
 scrollbar_interactive yes
 scrollbar_jump_on_click yes
@@ -115,8 +118,11 @@ map ctrl+shift+z scroll_to_prompt -1
 map ctrl+shift+x scroll_to_prompt 1
 map ctrl+shift+home      scroll_home
 map ctrl+shift+end       scroll_end
-map ctrl+shift+h         show_scrollback 
-map ctrl+shift+g show_last_command_output
+
+#show_scrollback 
+map ctrl+shift+h         kitty_scrollback_nvim
+#show_last_command_output
+map ctrl+shift+g kitty_scrollback_nvim --config ksb_builtin_last_cmd_output
 
 # Window management
 map ctrl+shift+enter    new_window
