--- a/.config/MangoHud/MangoHud.conf
+++ b/.config/MangoHud/MangoHud.conf
@@ -2,13 +2,14 @@
 legacy_layout=0
 
 horizontal
-background_alpha=0.3
-round_corners=0
+background_alpha=0.0
+round_corners=10
 background_color=000000
-font_size=20
+font_size=16
 text_color=FFFFFF
-position=top-left
+position=top-right
 toggle_hud=Shift_R+F12
+hud_compact
 gpu_list=0
 table_columns=3
 gpu_stats
@@ -17,7 +18,7 @@ gpu_load_value=50,90
 gpu_load_color=FFFFFF,FFAA7F,CC0000
 vram
 vram_color=AD64C1
-gpu_fan
+gpu_temp
 gpu_power
 gpu_color=2E9762
 cpu_stats
@@ -34,6 +35,7 @@ fps_limit_method=late
 toggle_fps_limit=Shift_L+F1
 fps_limit=0
 #offset=0
+gamemode
 vsync=4
 fps_color_change
 fps_color=B22222,FDFD09,39F900
