--- a/.config/vlc/vlc-qt-interface.conf
+++ b/.config/vlc/vlc-qt-interface.conf
@@ -1,6 +1,6 @@
 [General]
 filedialog-path=@Variant(\0\0\0\x11\0\0\0\xe/home/aechewhy)
-geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\x2\x94\0\0\x1\x30\0\0\x4\xeb\0\0\x2\xd3\0\0\x2\x94\0\0\x1\x30\0\0\x4\xeb\0\0\x2\xd3\0\0\0\0\0\0\0\0\a\x80\0\0\x2\x94\0\0\x1\x30\0\0\x4\xeb\0\0\x2\xd3)
+geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\x2\x94\0\0\x1\xf\0\0\x4\xeb\0\0\x2\xd3\0\0\x2\x94\0\0\x1\x30\0\0\x4\xeb\0\0\x2\xd3\0\0\0\0\0\0\0\0\a\x80\0\0\x2\x94\0\0\x1\x30\0\0\x4\xeb\0\0\x2\xd3)
 
 [FullScreen]
 pos=@Point(0 0)
@@ -16,5 +16,5 @@ playlistSize=@Size(-1 -1)
 status-bar-visible=false
 
 [RecentsMRL]
-list=file:///home/aechewhy/Downloads/test.mp4
-times=0
+list=file:///home/aechewhy/Downloads/H%E1%BA%BET%20TH%E1%BB%9CI.m4a, file:///home/aechewhy/Downloads/test.mp4
+times=0, 0
