--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -13,10 +13,10 @@ font_size 13
 # bold_italic_font JetBrainsMono Nerd Font Bold Italic
 
 #BACKGROUND#############################################################################
-background_opacity 0.8
+background_opacity 0.5
 dynamic_background_opacity yes
 enable_background_blur yes
-background_blur 0
+background_blur 1
 background_tint 0.0
 #Only works when have background image 
 transparent_background_colors black@0.5 red@0.5 green@0.5 yellow@0.5 blue@0.5 magenta@0.5 cyan@0.5 
@@ -37,7 +37,7 @@ tab_bar_style powerline
 tab_switch_strategy previous
 tab_separator "┇"
 #CURSOR##################################################################################
-# cursor #00ff00
+cursor red
 cursor_text_color background
 cursor_shape block
 cursor_shape_unfocused hollow
