--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -81,9 +81,11 @@ enabled_layouts *
 # If enabled, the window size will be remembered so that new instances of kitty will have the same
 # size as the previous instance. If disabled, the window will initially have size configured
 # by initial_window_width/height, in pixels.
-remember_window_size   no
-initial_window_width   900
-initial_window_height  600
+remember_window_size   yes
+initial_window_width   1920
+initial_window_height  1080
+window_resize_step_cells 2
+window_resize_step_lines 2
 
 enable_audio_bell no
 
@@ -125,7 +127,7 @@ map ctrl+shift+h         kitty_scrollback_nvim
 map ctrl+shift+g kitty_scrollback_nvim --config ksb_builtin_last_cmd_output
 
 # Window management
-map ctrl+shift+enter    new_window
+map ctrl+shift+r        start_resizing_window
 map ctrl+shift+w        close_window
 map ctrl+shift+]        next_window
 map ctrl+shift+[        previous_window
