--- a/.gitignore
+++ b/.gitignore
@@ -16,7 +16,27 @@
 !.config/Code/User/settings.json
 .config/pulse
 
-*.lock
 *.log
 *.bak
 *.swp
+**/tmp/
+**/temp/
+*.tmp
+
+**/logs*/
+**/LOGS*/
+**/Logs*/
+
+**/.cache/
+**/cache/
+**/caches/
+
+# Secrets
+*.env
+.env.*
+*.key
+*.pem
+*.crt
+*.p12
+*.pfx
+*.secrets
