--- a/.config/obs-studio/basic/profiles/Arch_linux/basic.ini
+++ b/.config/obs-studio/basic/profiles/Arch_linux/basic.ini
@@ -1,5 +1,5 @@
 [General]
-Name=Untitled
+Name=Arch linux
 
 [Output]
 Mode=Advanced
@@ -47,8 +47,8 @@ TrackIndex=1
 VodTrackIndex=2
 Encoder=obs_x264
 RecType=Standard
-RecFilePath=/home/aechewhy/Videos
-RecFormat2=hybrid_mp4
+RecFilePath=/home/aechewhy/Videos/OBS Studio
+RecFormat2=mkv
 RecUseRescale=false
 RecTracks=1
 RecEncoder=obs_nvenc_hevc_tex
@@ -70,11 +70,11 @@ Track5Bitrate=160
 Track6Bitrate=160
 RecSplitFileTime=15
 RecSplitFileSize=2048
-RecRB=false
-RecRBTime=20
+RecRB=true
+RecRBTime=120
 RecRBSize=512
 AudioEncoder=libfdk_aac
-RecAudioEncoder=libfdk_aac
+RecAudioEncoder=ffmpeg_aac
 RecSplitFileType=Time
 FFFormat=
 FFFormatMimeType=
@@ -82,7 +82,7 @@ FFVEncoderId=0
 FFVEncoder=
 FFAEncoderId=0
 FFAEncoder=
-FFExtension=mp4
+RecFileNameWithoutSpace=false
 
 [Video]
 BaseCX=1920
@@ -100,6 +100,7 @@ ColorSpace=709
 ColorRange=Partial
 SdrWhiteLevel=300
 HdrNominalPeakLevel=1000
+AutoRemux=true
 
 [Audio]
 MonitoringDeviceId=default
@@ -111,3 +112,11 @@ PeakMeterType=0
 
 [Panels]
 CookieId=A35EA5DCEF350773
+
+[Hotkeys]
+OBSBasic.StartStreaming={"bindings":[]}
+OBSBasic.StartRecording={"bindings":[{"control":true,"key":"OBS_KEY_INSERT"}]}
+OBSBasic.StopRecording={"bindings":[{"control":true,"key":"OBS_KEY_INSERT"}]}
+OBSBasic.PauseRecording={"bindings":[{"shift":true,"control":true,"key":"OBS_KEY_INSERT"}]}
+OBSBasic.UnpauseRecording={"bindings":[{"shift":true,"control":true,"key":"OBS_KEY_INSERT"}]}
+ReplayBuffer={"ReplayBuffer.Save":[]}
