--- a/.config/obs-studio/plugin_config/obs-websocket/config.json
+++ b/.config/obs-studio/plugin_config/obs-websocket/config.json
@@ -3,6 +3,6 @@
   "auth_required": true,
   "first_load": false,
   "server_enabled": false,
-  "server_password": "7VY2yf3xPf8grXzg",
+  "server_password": "HxYqufG1BD3AwUlY",
   "server_port": 4455
 }
