--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -101,7 +101,7 @@ clear_all_shortcuts yes
 kitty_mod ctrl+shift
 
 # Font
-map ctrl+flus change_font_size all +2.0
+map alt+flus change_font_size all +2.0
 map ctrl+shift+minus change_font_size all -2.0
 map kitty_mod+f6 change_font_size all 12.0
 # Clipboard
@@ -114,8 +114,8 @@ map ctrl+shift+up        scroll_line_up
 map ctrl+shift+down      scroll_likne_down
 map ctrl+shift+k         scroll_line_up
 map ctrl+shift+j         scroll_line_down
-map ctrl+fage_up   scroll_page_up
-map ctrl+fage_down scroll_page_down
+map alt+fage_up   scroll_page_up
+map alt+fage_down scroll_page_down
 map ctrl+shift+z scroll_to_prompt -1
 map ctrl+shift+x scroll_to_prompt 1
 map ctrl+shift+home      scroll_home
@@ -156,11 +156,11 @@ map alt+shift+.        move_tab_forward
 map alt+shift+,        move_tab_backward
 # Select and act on visible text
 map ctrl+shift+e open_url_with_hints
-map ctrl+f>f kitten hints --type path --program -
-map ctrl+f>p kitten hints --type path
-map ctrl+f>l kitten hints --type line --program -
-map ctrl+f>w kitten hints --type word --program -
-map ctrl+f>y kitten hints --type hyperlink
+map alt+f>f kitten hints --type path --program -
+map alt+f>p kitten hints --type path
+map alt+f>l kitten hints --type line --program -
+map alt+f>w kitten hints --type word --program -
+map alt+f>y kitten hints --type hyperlink
 # Miscellaneous
 map ctrl+shift+f9 edit_config_file
 map ctrl+shift+escape kitty_shell window
