--- a/.config/vlc/vlc-qt-interface.conf
+++ b/.config/vlc/vlc-qt-interface.conf
@@ -1,6 +1,6 @@
 [General]
 filedialog-path=@Variant(\0\0\0\x11\0\0\0\x36\x66ile:///home/aechewhy/Videos/2026-02-03%2010-34-35.mp4)
-geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\0\0\0\0\0!\0\0\a\x7f\0\0\x4\x37\0\0\0\0\0\0\0!\0\0\a\x7f\0\0\x4\x37\0\0\0\0\x2\0\0\0\a\x80\0\0\0\0\0\0\0!\0\0\a\x7f\0\0\x4\x37)
+geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\0\0\0\0\0\0\0\0\a\x7f\0\0\x4\x37\0\0\0\0\0\0\0!\0\0\a\x7f\0\0\x4\x37\0\0\0\0\x2\0\0\0\a\x80\0\0\0\0\0\0\0 \0\0\a\x7f\0\0\x4\x37)
 
 [FullScreen]
 pos=@Point(0 0)
@@ -10,7 +10,7 @@ wide=false
 [MainWindow]
 QtStyle=System's default
 adv-controls=0
-bgSize=@Size(1920 968)
+bgSize=@Size(1920 969)
 pl-dock-status=true
 playlist-visible=false
 playlistSize=@Size(-1 -1)
@@ -23,5 +23,5 @@ geometry="@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\x2\x94\0\0\x1,\0\0\x4\xeb\0\0\
 geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\x2\x30\0\0\0\xbe\0\0\x5O\0\0\x3y\0\0\x2\x30\0\0\0\xbe\0\0\x5O\0\0\x3y\0\0\0\0\0\0\0\0\a\x80\0\0\x2\x30\0\0\0\xbe\0\0\x5O\0\0\x3y)
 
 [RecentsMRL]
-list=file:///home/aechewhy/Videos/2026-02-03%2010-57-12.mp4, file:///home/aechewhy/Videos/2026-02-03%2010-34-35.mp4, file:///home/aechewhy/Videos/2026-02-03%2010-13-26.mp4, file:///home/aechewhy/Videos/2026-02-03%2009-45-14.mp4, file:///home/aechewhy/2026-02-03%2009-40-30.mp4, file:///home/aechewhy/2026-02-03%2009-39-27.mp4, file:///home/aechewhy/2026-02-03%2009-37-54.mp4, file:///home/aechewhy/Videos/Screencasts/2026-02/20260203_092105.mp4, file:///home/aechewhy/Downloads/H%E1%BA%BET%20TH%E1%BB%9CI.m4a, file:///home/aechewhy/Downloads/test.mp4
-times=0, 0, 0, 0, 0, 0, 0, 0, 0, 0
+list=file:///home/aechewhy/Videos/2026-02-08%2020-09-34.mp4, file:///home/aechewhy/Videos/Screencasts/2026-02/20260203_092105.mp4, file:///home/aechewhy/Videos/2026-02-03%2010-57-12.mp4, file:///home/aechewhy/Videos/2026-02-03%2010-34-35.mp4, file:///home/aechewhy/Videos/2026-02-03%2010-13-26.mp4, file:///home/aechewhy/Videos/2026-02-03%2009-45-14.mp4, file:///home/aechewhy/2026-02-03%2009-40-30.mp4, file:///home/aechewhy/2026-02-03%2009-39-27.mp4, file:///home/aechewhy/2026-02-03%2009-37-54.mp4, file:///home/aechewhy/Downloads/H%E1%BA%BET%20TH%E1%BB%9CI.m4a, file:///home/aechewhy/Downloads/test.mp4
+times=318987, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0
